Support for swig 3.0. Improved docu

--- a/Example/README
+++ b/Example/README
@@ -2,11 +2,10 @@ Project example showing how to use EasySwig (use as template for other projects)
 =========================================
 
 
-
 Mandatory components:
 
 - A subfolder named 'include' with the header files you want to wrap
-- A CSV file named 'api.csv' with the name of the namespace you want to wrap and classes to wrap/ignore
+- A CSV file named 'api.csv' with the name of the namespace you want to wrap and classes to wrap/ignore. See template.
 
 Optional components:
 
@@ -16,13 +15,13 @@ Optional components:
 Execute EasySwig:
 
 1. Move to this folder
-> cd spec/Example
+> cd Example
 
 2. Generate Doxygen XML Intermediate representation. Found in generated subfolder: 'easy-swig/doxygen'
-> sh ../../bin/easyswig.sh doxygen
+> sh ../bin/easyswig.sh doxygen
 
 3. Generate SWIG Interface Files (.i). Found in generated subfolder: 'easy-swig/generate'
-> sh ../../bin/easyswig.sh generate
+> sh ../bin/easyswig.sh generate
 
 4. Generate Wrappers using your installed version of SWIG. Found in generated subfolder: 'easy-swig/swig'
-> sh ../../bin/easyswig.sh swig
+> sh ../bin/easyswig.sh swig
